--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -36,4 +36,18 @@
         margin-left: 38rem;
         font-family: 'PT Serif', serif;
       }
-  
+      .fade-left {
+        animation: fadeLeftAnimation 1s ease-in-out;
+      }
+      
+      @keyframes fadeLeftAnimation {
+        0% {
+          opacity: 0;
+          transform: translateX(-20px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateX(0);
+        }
+      }
+      
