--- a/src/components/UserInfo.css
+++ b/src/components/UserInfo.css
@@ -67,3 +67,13 @@ form input, textarea{
     justify-content: center;
     margin: 0.3rem 0.3rem;
   }
+
+  .success-alert {
+    background-color: #0f5132;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px auto; /* Center the alert horizontally */
+    max-width: 300px; /* Set a maximum width for the alert */
+  }
