--- a/src/components/BlockhainExplain.css
+++ b/src/components/BlockhainExplain.css
@@ -1,9 +1,50 @@
-/* BlockhainExplain.css */
+
+.heading{
+    color: white;
+    text-align: center;
+    margin-top: 10rem;
+}
+
+.cool-underline {
+    position: relative;
+    display: inline-block;
+    font-size: 2rem; /* Adjust the font size as needed */
+    background: linear-gradient(120deg, #299fce, #036179);
+    background-repeat: no-repeat;
+    background-size: 100% 5px;
+    background-position: 0 100%;
+    transition: background-size 0.3s;
+    padding-bottom: 5px;
+}
+
+.cool-underline::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px; 
+    background: linear-gradient(120deg, #299fce, #036179);
+    background-repeat: no-repeat;
+    background-size: 100% 5px;
+    background-position: 0 0;
+    transition: background-size 0.3s;
+}
+
+.cool-underline:hover {
+    background-size: 0 5px;
+}
+
+.cool-underline:hover::before {
+    background-size: 0 5px;
+}
+
 .content-wrapper {
-    display: flex; /* Use flexbox for layout */
-    align-items: center; /* Vertically align content in the middle */
-    justify-content: space-between; /* Create space between text and image */
-    padding: 20px; /* Add some padding for spacing */
+    display: flex; 
+    align-items: center;
+    justify-content: space-between; 
+    padding: 20px; 
+    margin-top: 5rem;
   }
   
   .text-content {
@@ -12,8 +53,8 @@
   }
   
   .image-content {
-    width: 60%; /* Allocate 50% of the width to the image content */
-    text-align: right; /* Align the image to the right */
+    width: 60%; 
+    text-align: right;
   }
   
   .resized-image {
