--- a/src/components/normal.css
+++ b/src/components/normal.css
@@ -361,3 +361,26 @@
   [hidden] {
     display: none;
   }
+  body {
+    --sb-track-color: #fdfdfd;
+    --sb-thumb-color: #248686;
+    --sb-size: 12px;
+  
+    scrollbar-color: var(--sb-thumb-color) 
+                     var(--sb-track-color);
+  }
+  
+  body::-webkit-scrollbar {
+    width: var(--sb-size) 
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 10px;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 10px;
+    
+    }
