--- a/src/components/FAQs.css
+++ b/src/components/FAQs.css
@@ -43,6 +43,13 @@
     margin-top: 5rem;
 }
 
+.heading3{
+  color: white;
+  font: 100;
+  text-align: center;
+  font-family: 'Outfit', 'sans-serif';
+  /* margin-top: 5rem; */
+}
 
   
   
