--- a/src/components/BlockhainExplain.css
+++ b/src/components/BlockhainExplain.css
@@ -7,6 +7,7 @@
 
 .cool-underline {
     position: relative;
+    color: white;
     display: inline-block;
     font-size: 2rem; /* Adjust the font size as needed */
     background: linear-gradient(120deg, #299fce, #036179);
@@ -15,6 +16,7 @@
     background-position: 0 100%;
     transition: background-size 0.3s;
     padding-bottom: 5px;
+    
 }
 
 .cool-underline::before {
